--- a/style.scss
+++ b/style.scss
@@ -1,43 +1,84 @@
+$background-color: #ecf0f1;
+$primary-color: #4b77be;
+
 html {
     font-family: Verdana, sans-serif;
     font-size: 16px;
 }
 
-ul {
+.navbar {
     list-style-type: none;
+    //font-weight: bold;
+    float: left;
     margin: 0;
     padding: 0;
-}
-
-ul.nav {
-    background-color: #f1f1f1;
-    overflow: hidden;
+    width: 100%;
+    background-color: $background-color;
 
     li {
 	float: left;
+        align-item: start;
 
-        a {
+	a {
             display: block;
 	    color: #000;
             padding: 8px 16px;
 	    text-decoration: none;
+
+            &:hover {
+		background-color: $primary-color;;
+                color: #fff;
+	    }
+        }
+
+	&:hover > ul {
+            display: block;
+	    position: absolute;
         }
     }
-}
 
-ul.nav li a:hover {
-    background-color: #555;
-    color: #fff;
-}
-
-ul.nav ul {
-    display: none;
-}
-
-ul.nav ul li a {
-
+    ul {
+	list-style-type: none;
+        background-color: $background-color;
+        display: none;
+    }
 }
 
 .right {
     float: right;
+}
+
+.logo {
+    display: block;
+    margin: auto;
+    width: 150px;
+}
+
+.wrapper {
+    position: relative;
+    height: 500px;
+}
+
+.modules {
+
+}
+
+#navmenu {
+    height: 37px;
+}
+
+#background-img {
+    background-image: url('uiowa.jpeg');
+    background-size: contain;
+    opacity: .3;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+}
+
+#footer {
+
 }
