--- a/style.scss
+++ b/style.scss
@@ -8,7 +8,6 @@ html {
 
 .navbar {
     list-style-type: none;
-    //font-weight: bold;
     float: left;
     margin: 0;
     padding: 0;
@@ -17,7 +16,6 @@ html {
 
     li {
 	float: left;
-        align-item: start;
 
 	a {
             display: block;
@@ -44,27 +42,59 @@ html {
     }
 }
 
-.right {
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+    background-color: $background-color;
+    //margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+}
+
+.close {
+    color: #aaa;
     float: right;
+    font-size: 28px;
+    font-weight: bold;
+
+    &:hover {
+	color: #000;
+        text-decoration: none;
+	cursor: pointer;
+    }
 }
 
-.logo {
-    display: block;
-    margin: auto;
-    width: 150px;
-}
-
-.wrapper {
-    position: relative;
-    height: 500px;
-}
-
-.modules {
-
-}
+$nav-height: 37px;
+$top-height: 500px;
 
 #navmenu {
-    height: 37px;
+    width: 100%;
+    height: $nav-height;
+    position: absolute;
+    z-index: 1;
+}
+
+#wrapper {
+    position: relative;
+    top: $nav-height;
+    height: $top-height;
+}
+
+#module-wrapper {
+    position: relative;
+    top: $nav-height;
+    display: inline-block;
 }
 
 #background-img {
@@ -80,5 +110,15 @@ html {
 }
 
 #footer {
+    
+}
 
+.logo {
+    display: block;
+    margin: auto;
+    width: 150px;
+}
+
+.right {
+    float: right;
 }
