--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,11 +1,15 @@
 $background-image: url('../resources/images/uiowa.jpeg');
-$background-color: #ecf0f1;
-$primary-color: #4b77be;
-$darker-color: #2e5266;
+$light-color: #FFFFFF;
+$dark-color: #404042;
+$primary-color: #07829A;
+$green-color: #9FBF3A;
+$red-color: #ED7863;
+$top-color: #B8E2E3;
 
 $top-height: 500px;
 $content-height: 570px;
 $content-width: 730px;
+$spacing: 20px;
 
 * {
     margin: 0;
@@ -15,7 +19,7 @@ $content-width: 730px;
 body {
     font-family: Arial, sans-serif;
     font-size: 16px;
-    background-color: $background-color;
+    background-color: $light-color;
 }
 
 iframe {
@@ -28,7 +32,8 @@ iframe {
     list-style-type: none;
     float: left;
     width: 100%;
-    background-color: $background-color;
+    display: flex;
+    justify-content: space-between;
 
     li {
 	float: left;
@@ -36,7 +41,7 @@ iframe {
 
 	a {
             display: block;
-	    color: #000;
+	    color: $light-color;
             padding: 8px 16px;
 	    text-decoration: none;
 
@@ -58,15 +63,24 @@ iframe {
 
     ul {
 	list-style-type: none;
-        background-color: $background-color;
+        background-color: $light-color;
         display: none;
 	width: 100%;
     }
 }
 
+.lang {
+    background-color: lighten($dark-color, 15%);
+    margin: 5px;
+    font-size: 10px;
+    border: 1px solid $dark-color;
+}
+
 .module {
     float: left;
-    padding: 10px;
+  //padding: 0 $spacing;
+    max-width: 25%;
+    min-height: 200px;
 }
 
 .modal {
@@ -81,7 +95,7 @@ iframe {
 }
 
 .modal-content {
-    background-color: $background-color;
+    background-color: $light-color;
     padding: 10px;
     margin: auto;
     border: 1px solid #888;
@@ -96,7 +110,7 @@ iframe {
     font-weight: bold;
 
     &:hover {
-	color: $darker-color;
+	color: $dark-color;
         text-decoration: none;
 	cursor: pointer;
     }
@@ -105,58 +119,127 @@ iframe {
 .open {
     border: none;
     font-size: 14px;
-    padding: 10px;
-    background-color: $background-color;
+    padding: $spacing;
+    background-color: $light-color;
+    height: 100%;
 
     &:hover {
-	background-color: lighten($primary-color, 15%);
+	background-color: $primary-color;
     }
+}
+
+.module-button {
+    @extend .open;
+    background-color: $green-color;
+
+    &:hover {
+	background-color: darken($green-color, 15%);
+    }
+}
+
+.anatomy-button {
+    @extend .open;
+    max-width: 100%;
+    height: 100%;
+    padding: 0;
+}
+
+
+.menu {
+    float: left;
+    width: 40%;
+    display: flex;
+    justify-content: space-around;
+}
+
+.centered {
+    margin: auto;
+    text-align: center;
 }
 
 .logo {
     display: block;
     margin: auto;
     padding: 10px;
-    width: 150px;
+    width: 150px;    
 }
 
-.right {
-    float: right;
+.main-logo {
+    @extend .logo;
+    width: 100px;
+    position: relative;
+    top: -75px;
+    z-index: 1;
 }
 
-#main-title {
-    margin: 0 20px;
+.app-logo {
+    @extend .logo;
+    float: left;
+    width: 200px;
+    padding-bottom: 30px;
+}
+
+.module-logo {
+    @extend .logo;
+    width: 50px;
+    //margin-top: -55px;
+}
+
+.textbox {
     padding: 20px;
+    white-space: pre-line;
+    color: $light-color;
 }
 
-#main-text {
-    margin: 0 20px;
-    padding: 20px;
-    white-space: pre;
+#header {
+    background-color: $top-color;
+    display: block;
 }
 
 #navmenu {
     width: 100%;
     position: absolute;
+    background-color: $dark-color;
     z-index: 1;
+}
+
+#menuRight {
+    float: right;
+    width: 40%;
+    display: flex;
+    justify-content: right;
+    flex-wrap: wrap;
 }
 
 #wrapper {
     position: relative;
-    height: 100%;
+    height: 300px;
+    margin-bottom: $spacing;
 }
 
-#module-wrapper {
+#title {
+    display: inline-block;
     position: relative;
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
+    //top: 0%;
+    padding-right: 80px;
+    background-color: #000;
+    opacity: .6;
+}
+
+#text-wrapper {
+    position: relative;
+    background-color: $primary-color;
+    margin-bottom: $spacing;
+}
+
+#main-text {
+    width: 60%;
 }
 
 #background-img {
     background-image: $background-image;
     background-size: contain;
-    opacity: .3;
+    opacity: .4;
     position: absolute;
     top: 0px;
     left: 0px;
@@ -165,9 +248,42 @@ iframe {
     height: 100%;
 }
 
+#phone-img {
+    float: right;
+    position: relative;
+    right: 10%;
+    top: -10%;
+    z-index: 1;
+}
+
+#anatomy-img {
+    width: 100%;
+}
+
+#anatomy-wrapper {
+    position: relative;
+    background-color: $red-color;
+    display: flex;
+    justify-content: space-between;
+    padding-left: 40px;
+}
+
+#module-wrapper {
+    position: relative;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    background-color: $green-color;
+    margin: $spacing + 20px 0 $spacing 0;
+}
+
 #footer {
     position: relative;
-    color: $background-color;
-    background-color: $darker-color;
-    padding: 20px;
+    color: $light-color;
+    background-color: $top-color;
+    padding: $spacing;
+}
+
+#footer-text {
+    color: $dark-color;
 }
