--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,4 +1,5 @@
 $background-image: url('../resources/images/uiowa.jpeg');
+
 $light-color: #FFFFFF;
 $dark-color: #404042;
 $primary-color: #07829A;
@@ -122,10 +123,6 @@ iframe {
     padding: $spacing;
     background-color: $light-color;
     height: 100%;
-
-    &:hover {
-	background-color: $primary-color;
-    }
 }
 
 .module-button {
@@ -142,6 +139,10 @@ iframe {
     max-width: 100%;
     height: 100%;
     padding: 0;
+
+    &:hover {
+	background-color: darken($light-color, 15%);
+    }
 }
 
 
@@ -155,6 +156,7 @@ iframe {
 .centered {
     margin: auto;
     text-align: center;
+    padding: $spacing;
 }
 
 .logo {
@@ -183,6 +185,7 @@ iframe {
     @extend .logo;
     width: 50px;
     //margin-top: -55px;
+    filter: grayscale(100%);
 }
 
 .textbox {
@@ -238,7 +241,7 @@ iframe {
 
 #background-img {
     background-image: $background-image;
-    background-size: contain;
+    background-size: 100%;
     opacity: .4;
     position: absolute;
     top: 0px;
@@ -271,7 +274,7 @@ iframe {
 #module-wrapper {
     position: relative;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     flex-wrap: wrap;
     background-color: $green-color;
     margin: $spacing + 20px 0 $spacing 0;
