--- a/styles/style.css
+++ b/styles/style.css
@@ -104,7 +104,7 @@ iframe {
   display: flex;
   justify-content: space-around; }
 
-.centered {
+.centered, #module-text {
   margin: auto;
   text-align: center;
   padding: 20px; }
@@ -188,7 +188,8 @@ iframe {
   position: relative;
   right: 10%;
   top: -10%;
-  z-index: 1; }
+  z-index: 1;
+  height: 400px; }
 
 #anatomy-img {
   width: 100%; }
@@ -203,10 +204,16 @@ iframe {
 #module-wrapper {
   position: relative;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   flex-wrap: wrap;
   background-color: #9FBF3A;
-  margin: 40px 0 20px 0; }
+  margin: 20px 0 20px 0; }
+
+#module-text {
+  max-width: 25%;
+  margin-left: 0;
+  margin-right: 0;
+  font-weight: bold; }
 
 #footer {
   position: relative;
