flash files load properly

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -123,6 +123,7 @@ iframe {
     padding: $spacing;
     background-color: $light-color;
     height: 100%;
+    cursor: pointer;
 }
 
 .module-button {
@@ -210,7 +211,7 @@ iframe {
     float: right;
     width: 40%;
     display: flex;
-    justify-content: right;
+    justify-content: flex-end;
     flex-wrap: wrap;
 }
 
@@ -260,6 +261,15 @@ iframe {
     height: 400px;
 }
 
+#phone-size {
+    position: absolute;
+    height: 296px;
+    width: 168px;
+    right: 30px;
+    top: 52px;
+    z-index: 2;
+}
+
 #anatomy-img {
     width: 100%;
 }
@@ -270,6 +280,7 @@ iframe {
     display: flex;
     justify-content: space-between;
     padding-left: 40px;
+    margin: $spacing 0;
 }
 
 #module-wrapper {
@@ -278,7 +289,7 @@ iframe {
     justify-content: space-around;
     flex-wrap: wrap;
     background-color: $green-color;
-    margin: $spacing 0 $spacing 0;
+    margin: $spacing 0;
 }
 
 #module-text {
