--- a/styles/style.css
+++ b/styles/style.css
@@ -84,7 +84,8 @@ iframe {
   font-size: 14px;
   padding: 20px;
   background-color: #FFFFFF;
-  height: 100%; }
+  height: 100%;
+  cursor: pointer; }
 
 .module-button {
   background-color: #9FBF3A; }
@@ -149,7 +150,7 @@ iframe {
   float: right;
   width: 40%;
   display: flex;
-  justify-content: right;
+  justify-content: flex-end;
   flex-wrap: wrap; }
 
 #wrapper {
@@ -191,6 +192,14 @@ iframe {
   z-index: 1;
   height: 400px; }
 
+#phone-size {
+  position: absolute;
+  height: 296px;
+  width: 168px;
+  right: 30px;
+  top: 52px;
+  z-index: 2; }
+
 #anatomy-img {
   width: 100%; }
 
@@ -199,7 +208,8 @@ iframe {
   background-color: #ED7863;
   display: flex;
   justify-content: space-between;
-  padding-left: 40px; }
+  padding-left: 40px;
+  margin: 20px 0; }
 
 #module-wrapper {
   position: relative;
@@ -207,7 +217,7 @@ iframe {
   justify-content: space-around;
   flex-wrap: wrap;
   background-color: #9FBF3A;
-  margin: 20px 0 20px 0; }
+  margin: 20px 0; }
 
 #module-text {
   max-width: 25%;
