--- a/styles/style.css
+++ b/styles/style.css
@@ -18,27 +18,33 @@ iframe {
   width: 100%;
   display: flex;
   justify-content: space-between; }
-  .navbar li {
-    float: left;
-    position: relative; }
-    .navbar li a {
-      display: block;
-      color: #FFFFFF;
-      padding: 8px 16px;
-      text-decoration: none; }
-      .navbar li a:hover {
-        background-color: #07829A;
-        color: #fff; }
-    .navbar li ul li {
-      width: 100%; }
-    .navbar li:hover > ul {
-      display: block;
-      position: absolute; }
-  .navbar ul {
-    list-style-type: none;
-    background-color: #FFFFFF;
-    display: none;
-    width: 100%; }
+
+.navbar li {
+  float: left;
+  position: relative; }
+
+.navbar li a {
+  display: block;
+  color: #FFFFFF;
+  padding: 8px 16px;
+  text-decoration: none; }
+
+.navbar li a:hover {
+  background-color: #07829A;
+  color: #fff; }
+
+.navbar li ul li {
+  width: 100%; }
+
+.navbar li:hover > ul {
+  display: block;
+  position: absolute; }
+
+.navbar ul {
+  list-style-type: none;
+  background-color: #FFFFFF;
+  display: none;
+  width: 100%; }
 
 .lang {
   background-color: #666669;
@@ -74,10 +80,11 @@ iframe {
   float: right;
   font-size: 28px;
   font-weight: bold; }
-  .close:hover {
-    color: #404042;
-    text-decoration: none;
-    cursor: pointer; }
+
+.close:hover {
+  color: #404042;
+  text-decoration: none;
+  cursor: pointer; }
 
 .open, .module-button, .anatomy-button {
   border: none;
@@ -89,15 +96,17 @@ iframe {
 
 .module-button {
   background-color: #9FBF3A; }
-  .module-button:hover {
-    background-color: #6e8428; }
+
+.module-button:hover {
+  background-color: #6e8428; }
 
 .anatomy-button {
   max-width: 100%;
   height: 100%;
   padding: 0; }
-  .anatomy-button:hover {
-    background-color: #d9d9d9; }
+
+.anatomy-button:hover {
+  background-color: #d9d9d9; }
 
 .menu {
   float: left;
@@ -200,6 +209,9 @@ iframe {
   top: 52px;
   z-index: 2; }
 
+#features {
+  margin: 0 40px; }
+
 #anatomy-img {
   width: 100%; }
 
@@ -233,5 +245,8 @@ iframe {
 
 #footer-text {
   color: #404042; }
+
+/*# sourceMappingURL=style.scss.map */
+/*# sourceMappingURL=style.scss.map */
 
 /*# sourceMappingURL=style.css.map */
